--- a/notebooks/1-use-cases.ipynb
+++ b/notebooks/1-use-cases.ipynb
@@ -57,24 +57,24 @@
     "queries = {\n",
     "    \"recommendations\": [\n",
     "      {\n",
-    "        \"q_type\": \"Retrieval\",\n",
-    "        \"question\": \"What are the names of the top 5 movies with a budget over 100 million dollars?\",\n",
-    "        \"query\": \"MATCH (m:Movie) WHERE m.budget > 100000000 RETURN m\"\n",
+    "        \"task\": \"Topology-Based\",\n",
+    "        \"question\": \"Which director directed the most amount of movies?\",\n",
+    "        \"query\": \"MATCH (d:Director)-[r:DIRECTED]-(m:Movie) RETURN d, r, m\"\n",
     "      },\n",
     "      {\n",
-    "        \"q_type\": \"Aggregation\",\n",
-    "        \"question\": \"What are the top 5 movies by revenue released in 1995?\",\n",
-    "        \"query\": \"MATCH (m:Movie) WHERE m.year = 1995 AND m.revenue IS NOT NULL RETURN m\"\n",
+    "        \"task\": \"Attribute-Based\",\n",
+    "        \"question\": \"Which of the movies has the heighest average rating by a user?\",\n",
+    "        \"query\": \"MATCH (u:User)-[r:RATED]-(m:Movie) RETURN u, r, m\"\n",
     "      },\n",
     "      {\n",
-    "        \"q_type\": \"Pathfinding\",\n",
-    "        \"question\": \"What are the names of actors who have acted in more than five movies?\",\n",
-    "        \"query\": \"MATCH (a:Actor)-[:ACTED_IN]->(m:Movie) WITH a, count(m) AS numMovies WHERE numMovies > 5 RETURN a\"\n",
+    "        \"task\": \"Browsing\",\n",
+    "        \"question\": \"Can you find all actors that also directed the movie they played in?\",\n",
+    "        \"query\": \"MATCH (a:Actor)-[r:ACTED_IN]->(m:Movie)-[d:DIRECTED]-(e:Actor) RETURN a, r, m, d, e\"\n",
     "      },\n",
     "       {\n",
-    "        \"q_type\": \"Verbose\",\n",
-    "        \"question\": \"Find the names of the top 5 movies with the lowest imdbRating.\",\n",
-    "        \"query\": \"MATCH (m:Movie) WHERE m.imdbRating IS NOT NULL RETURN m LIMIT 10\"\n",
+    "        \"task\": \"Overview\",\n",
+    "        \"question\": \"Can you estimate the size of the entire network?\",\n",
+    "        \"query\": \"MATCH * RETURN *\"\n",
     "      }\n",
     "    ],\n",
     "}"
@@ -92,29 +92,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error calculating modularity: Graph must have at least one edge and one node to calculate modularity.\n",
-      "Recommended visualizations: ['Treemap', 'Sunburst', 'BioFabric', 'Quilts', 'Adjacency Matrix', 'Attribute Driven Positioning', 'Semantic Substrates', 'Node-Link']\n",
-      "Error calculating modularity: Graph must have at least one edge and one node to calculate modularity.\n",
-      "Recommended visualizations: ['Treemap', 'Sunburst', 'BioFabric', 'Quilts', 'Adjacency Matrix', 'Attribute Driven Positioning', 'Semantic Substrates', 'Node-Link']\n",
-      "Error calculating modularity: Graph must have at least one edge and one node to calculate modularity.\n",
-      "Recommended visualizations: ['Treemap', 'Sunburst', 'BioFabric', 'Quilts', 'Adjacency Matrix', 'Attribute Driven Positioning', 'Semantic Substrates', 'Node-Link']\n",
-      "Error calculating modularity: Graph must have at least one edge and one node to calculate modularity.\n",
-      "Recommended visualizations: ['BioFabric', 'Quilts', 'Adjacency Matrix', 'Treemap', 'Sunburst', 'Attribute Driven Positioning', 'Semantic Substrates', 'Node-Link']\n",
-      "Error calculating modularity: Graph must have at least one edge and one node to calculate modularity.\n",
-      "Recommended visualizations: ['Treemap', 'Sunburst', 'BioFabric', 'Quilts', 'Attribute Driven Positioning', 'Semantic Substrates', 'Adjacency Matrix', 'Node-Link']\n",
-      "Error calculating modularity: Graph must have at least one edge and one node to calculate modularity.\n",
-      "Recommended visualizations: ['BioFabric', 'Quilts', 'Adjacency Matrix', 'Treemap', 'Sunburst', 'Attribute Driven Positioning', 'Semantic Substrates', 'Node-Link']\n",
-      "Error calculating modularity: Graph must have at least one edge and one node to calculate modularity.\n",
-      "Recommended visualizations: ['BioFabric', 'Quilts', 'Adjacency Matrix', 'Treemap', 'Sunburst', 'Attribute Driven Positioning', 'Semantic Substrates', 'Node-Link']\n",
-      "Error calculating modularity: Graph must have at least one edge and one node to calculate modularity.\n",
-      "Recommended visualizations: ['Treemap', 'Sunburst', 'BioFabric', 'Quilts', 'Attribute Driven Positioning', 'Semantic Substrates', 'Adjacency Matrix', 'Node-Link']\n"
+      "ececuted query\n",
+      "created graph\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception ignored in: <bound method IPythonKernel._clean_thread_parent_frames of <ipykernel.ipkernel.IPythonKernel object at 0x1044da8e0>>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/sjoerdvink/Developer/Experiments/vigor-visualization-recommendation-for-graphs/.venv/lib/python3.9/site-packages/ipykernel/ipkernel.py\", line 775, in _clean_thread_parent_frames\n",
+      "    def _clean_thread_parent_frames(\n",
+      "KeyboardInterrupt: \n"
      ]
     }
    ],
@@ -127,6 +124,7 @@
     "        G = Graph()\n",
     "\n",
     "        records, summary, keys = driver.execute_query(query['query'], database_=database)\n",
+    "        print('ececuted query')\n",
     "        for record in records:\n",
     "            for element in record:\n",
     "                if isinstance(element, Node):\n",
@@ -134,14 +132,16 @@
     "                elif isinstance(element, Relationship):\n",
     "                    G.add_edge(record[0], record[1], type=element.type, attributes=element.items())\n",
     "\n",
+    "        print('created graph')\n",
     "        graph_stats = G.get_statistics()\n",
+    "        print(graph_stats)\n",
     "\n",
     "        # Unpack recommendations and scores\n",
-    "        recommendations_with_scores = vigor.recommend_n(graph_stats, 8)\n",
+    "        recommendations_with_scores = vigor.recommend(graph_stats, 8)\n",
     "        recommendations = [rec[0].value for rec in recommendations_with_scores]  # Extract recommendations\n",
     "        scores = [rec[1] for rec in recommendations_with_scores]  # Extract scores\n",
     "\n",
-    "        print(\"Recommended visualizations:\", recommendations)\n",
+    "        # print(\"Recommended visualizations:\", recommendations)\n",
     "\n",
     "        # Add recommendations and scores to graph stats\n",
     "        graph_stats['database_name'] = database\n",
