--- a/notebooks/3-evaluation.ipynb
+++ b/notebooks/3-evaluation.ipynb
@@ -59,7 +59,7 @@
     "    for interaction_index, interaction in enumerate(data[:5]):\n",
     "        statistics = interaction['statistics']\n",
     "        sorted_visualizations = interaction['sorted_visualizations']\n",
-    "        recommendations_with_scores = vigor.recommend_n(statistics, 8)  # Get recommendations with scores\n",
+    "        recommendations_with_scores = vigor.recommend(statistics, 8)  # Get recommendations with scores\n",
     "\n",
     "        print(\"recommendations_with_scores\", recommendations_with_scores)\n",
     "        for i, (recommendation, score) in enumerate(recommendations_with_scores):\n",
