--- a/notebooks/3-evaluation.ipynb
+++ b/notebooks/3-evaluation.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,9 +108,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "recommendations_with_scores [(<VisualizationType.BIOFABRIC: 'BioFabric'>, np.float64(0.8341052631578947)), (<VisualizationType.QUILTS: 'Quilts'>, np.float64(0.767438596491228)), (<VisualizationType.ADJACENCY_MATRIX: 'Adjacency Matrix'>, np.float64(0.7507719298245613)), (<VisualizationType.NODE_LINK: 'Node-Link'>, np.float64(0.6660350877192982)), (<VisualizationType.ATTRIBUTE_DRIVEN_NODELINK: 'Attribute Driven Positioning'>, np.float64(0.5993684210526316)), (<VisualizationType.SEMANTIC_SUBSTRATES: 'Semantic Substrates'>, np.float64(0.5993684210526316)), (<VisualizationType.TREEMAP: 'Treemap'>, np.float64(0.2827017543859649)), (<VisualizationType.SUNBURST: 'Sunburst'>, np.float64(0.2827017543859649))]\n",
+      "feedback 0.16666666666666666\n",
+      "<vigor.visualization.Visualization object at 0x3165dcca0> {'size': 41, 'density': 0.05, 'volume': 40, 'node_types': 1, 'node_attributes': 6, 'edge_types': 1, 'edge_attributes': 1}\n",
+      "[<vigor.predicate.Predicate object at 0x3165dcc70>, <vigor.predicate.Predicate object at 0x3165dcb80>, <vigor.predicate.Predicate object at 0x3165dcbb0>, <vigor.predicate.Predicate object at 0x3165dcbe0>, <vigor.predicate.Predicate object at 0x3165dcc10>, <vigor.predicate.Predicate object at 0x3165dcb20>, <vigor.predicate.Predicate object at 0x3165dcd00>, <vigor.predicate.Predicate object at 0x3165dcd60>, <vigor.predicate.Predicate object at 0x3165dcf70>, <vigor.predicate.Predicate object at 0x3165dcee0>, <vigor.predicate.Predicate object at 0x3165dce80>, <vigor.predicate.Predicate object at 0x3165dcf10>, <vigor.predicate.Predicate object at 0x3165dcf40>, <vigor.predicate.Predicate object at 0x3165dcfa0>, <vigor.predicate.Predicate object at 0x3165dc1f0>]\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'is_bipartite'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Calculate correlations for three different JSON files\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m correlation_data_1 \u001b[38;5;241m=\u001b[39m \u001b[43mcalculate_correlations\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m../data/evaluation/uninformed_user.json\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mUninformed User\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      3\u001b[0m correlation_data_2 \u001b[38;5;241m=\u001b[39m calculate_correlations(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../data/evaluation/informed_user.json\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mInformed User\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      4\u001b[0m correlation_data_3 \u001b[38;5;241m=\u001b[39m calculate_correlations(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../data/evaluation/fifty_fifty_user.json\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mBalanced User\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[2], line 39\u001b[0m, in \u001b[0;36mcalculate_correlations\u001b[0;34m(file_path, label)\u001b[0m\n\u001b[1;32m     37\u001b[0m             \u001b[38;5;28mprint\u001b[39m(vis, statistics)\n\u001b[1;32m     38\u001b[0m             \u001b[38;5;28mprint\u001b[39m(vis\u001b[38;5;241m.\u001b[39mpredicates)\n\u001b[0;32m---> 39\u001b[0m             \u001b[43mvis\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mupdate\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfeedback\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstatistics\u001b[49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# Update the visualization with feedback\u001b[39;00m\n\u001b[1;32m     40\u001b[0m             \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[1;32m     42\u001b[0m \u001b[38;5;66;03m# Calculate Spearman's rank correlation\u001b[39;00m\n",
+      "File \u001b[0;32m~/Developer/Experiments/vigor-visualization-recommendation-for-graphs/vigor/visualization.py:26\u001b[0m, in \u001b[0;36mVisualization.update\u001b[0;34m(self, feedback, stats, n_iter)\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mupdate\u001b[39m(\u001b[38;5;28mself\u001b[39m, feedback: \u001b[38;5;28mint\u001b[39m, stats: Dict[\u001b[38;5;28mstr\u001b[39m, \u001b[38;5;28mfloat\u001b[39m], n_iter: \u001b[38;5;28mint\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1000\u001b[39m):\n\u001b[1;32m     25\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Update predicate scores using feedback as reward\"\"\"\u001b[39;00m\n\u001b[0;32m---> 26\u001b[0m     x \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mfrom_numpy(np\u001b[38;5;241m.\u001b[39marray([[stats[p\u001b[38;5;241m.\u001b[39mstatistic] \u001b[38;5;28;01mfor\u001b[39;00m p \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mpredicates]]))\u001b[38;5;241m.\u001b[39mfloat()\u001b[38;5;241m.\u001b[39mto(device)\n\u001b[1;32m     27\u001b[0m     x \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mcat([x, torch\u001b[38;5;241m.\u001b[39mrand(x\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m], \u001b[38;5;241m1\u001b[39m)], dim\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m     28\u001b[0m     feedback_tensor \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mtensor([feedback], dtype\u001b[38;5;241m=\u001b[39mtorch\u001b[38;5;241m.\u001b[39mfloat32, device\u001b[38;5;241m=\u001b[39mdevice)\u001b[38;5;241m.\u001b[39mview(\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m1\u001b[39m)\n",
+      "File \u001b[0;32m~/Developer/Experiments/vigor-visualization-recommendation-for-graphs/vigor/visualization.py:26\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mupdate\u001b[39m(\u001b[38;5;28mself\u001b[39m, feedback: \u001b[38;5;28mint\u001b[39m, stats: Dict[\u001b[38;5;28mstr\u001b[39m, \u001b[38;5;28mfloat\u001b[39m], n_iter: \u001b[38;5;28mint\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1000\u001b[39m):\n\u001b[1;32m     25\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Update predicate scores using feedback as reward\"\"\"\u001b[39;00m\n\u001b[0;32m---> 26\u001b[0m     x \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mfrom_numpy(np\u001b[38;5;241m.\u001b[39marray([[\u001b[43mstats\u001b[49m\u001b[43m[\u001b[49m\u001b[43mp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstatistic\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m p \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mpredicates]]))\u001b[38;5;241m.\u001b[39mfloat()\u001b[38;5;241m.\u001b[39mto(device)\n\u001b[1;32m     27\u001b[0m     x \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mcat([x, torch\u001b[38;5;241m.\u001b[39mrand(x\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m], \u001b[38;5;241m1\u001b[39m)], dim\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m     28\u001b[0m     feedback_tensor \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mtensor([feedback], dtype\u001b[38;5;241m=\u001b[39mtorch\u001b[38;5;241m.\u001b[39mfloat32, device\u001b[38;5;241m=\u001b[39mdevice)\u001b[38;5;241m.\u001b[39mview(\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m1\u001b[39m)\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'is_bipartite'"
+     ]
+    }
+   ],
    "source": [
     "# Calculate correlations for three different JSON files\n",
     "correlation_data_1 = calculate_correlations('../data/evaluation/uninformed_user.json', 'Uninformed User')\n",
