fixed vigor error

--- a/notebooks/1-use-cases.ipynb
+++ b/notebooks/1-use-cases.ipynb
@@ -108,7 +108,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Exception ignored in: <bound method IPythonKernel._clean_thread_parent_frames of <ipykernel.ipkernel.IPythonKernel object at 0x106b0e8e0>>\n",
+      "Exception ignored in: <bound method IPythonKernel._clean_thread_parent_frames of <ipykernel.ipkernel.IPythonKernel object at 0x104d9a8b0>>\n",
       "Traceback (most recent call last):\n",
       "  File \"/Users/sjoerdvink/Developer/Experiments/vigor-visualization-recommendation-for-graphs/.venv/lib/python3.9/site-packages/ipykernel/ipkernel.py\", line 775, in _clean_thread_parent_frames\n",
       "    def _clean_thread_parent_frames(\n",
