--- a/notebooks/2-data_generation.ipynb
+++ b/notebooks/2-data_generation.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,6 +122,7 @@
     "        edge_types_category = random.choice(['homogeneous', 'heterogeneous'])\n",
     "        edge_attributes_category = random.choice(['few', 'several'])\n",
     "\n",
+    "        # Determine graph size based on size category\n",
     "        if size_category == 'small':\n",
     "            size = np.random.randint(1, 100)\n",
     "        elif size_category == 'medium':\n",
@@ -129,11 +130,13 @@
     "        else:\n",
     "            size = np.random.randint(1000, 2000)\n",
     "\n",
+    "        # Generate node and edge characteristics\n",
     "        node_types = 1 if node_type_category == 'homogeneous' else np.random.randint(2, 4)\n",
     "        node_attributes = np.random.randint(1, 5) if node_attributes_category == 'few' else np.random.randint(6, 9)\n",
     "        edge_types = 1 if edge_types_category == 'homogeneous' else np.random.randint(2, 4)\n",
     "        edge_attributes = np.random.randint(1, 2) if edge_attributes_category == 'few' else np.random.randint(3, 5)\n",
     "\n",
+    "        # Generate edge volume based on type category\n",
     "        if type_category == 'dense':\n",
     "            lower_bound = max(1, size * (size - 1) // 4)\n",
     "            upper_bound = max(lower_bound + 1, size * (size - 1) // 2)\n",
@@ -145,14 +148,17 @@
     "            upper_bound = max(2, size * (size - 1) // 2)\n",
     "            volume = np.random.randint(1, upper_bound)\n",
     "        elif type_category == 'tree':\n",
-    "            volume = size - 1\n",
+    "            volume = size - 1  # Trees have n-1 edges\n",
     "\n",
     "        density = round(volume / (size * (size - 1) // 2), 2) if size > 1 else 0\n",
+    "\n",
+    "        # Determine is_tree and is_bipartite based on graph type and properties\n",
+    "        is_tree = 1 if type_category == 'tree' and volume == size - 1 else 0\n",
+    "        is_bipartite = 1 if type_category == 'k-partite' and node_types == 2 else 0\n",
     "\n",
     "        # Score initialization for each visualization type\n",
     "        scores = {vis: 0 for vis in VisualizationType}\n",
     "        for vis in scores.keys():\n",
-    "            # Assuming nobre_scores is a predefined dictionary containing the scoring for each visualization type\n",
     "            scores[vis] += nobre_scores['size'][vis][size_category]\n",
     "            scores[vis] += nobre_scores['type'][vis][type_category]\n",
     "            scores[vis] += nobre_scores['node_types'][vis][node_type_category]\n",
@@ -177,16 +183,19 @@
     "                random.shuffle(sorted_visualizations)  # 50% chance of shuffling the array\n",
     "                best_visualization = sorted_visualizations[0]\n",
     "\n",
+    "        # Collect statistics\n",
     "        statistics = {\n",
+    "            \"is_bipartite\": is_bipartite,\n",
+    "            \"is_tree\": is_tree,\n",
     "            \"size\": size,\n",
     "            \"density\": density,\n",
-    "            \"volume\": volume,\n",
     "            \"node_types\": node_types,\n",
     "            \"node_attributes\": node_attributes,\n",
     "            \"edge_types\": edge_types,\n",
     "            \"edge_attributes\": edge_attributes\n",
     "        }\n",
     "\n",
+    "        # Append the generated sample\n",
     "        nobre_samples.append({\n",
     "            \"statistics\": statistics,\n",
     "            \"best_visualization\": best_visualization.name,  # Store visualization as a string representation\n",
@@ -198,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
