--- a/notebooks/1-use-cases.ipynb
+++ b/notebooks/1-use-cases.ipynb
@@ -69,12 +69,12 @@
     "      {\n",
     "        \"task\": \"Browsing\",\n",
     "        \"question\": \"Can you find all actors that also directed the movie they played in?\",\n",
-    "        \"query\": \"MATCH (a:Actor)-[r:ACTED_IN]->(m:Movie)-[d:DIRECTED]-(e:Actor) RETURN * LIMIT 1000\"\n",
+    "        \"query\": \"MATCH (a:Actor)-[r:ACTED_IN]-(m:Movie)-[d:DIRECTED]-(e:Actor) RETURN * LIMIT 1000\"\n",
     "      },\n",
     "       {\n",
     "        \"task\": \"Overview\",\n",
     "        \"question\": \"Can you estimate the size of the entire network?\",\n",
-    "        \"query\": \"MATCH (n)-[r]->(m) RETURN * LIMIT 1000\"\n",
+    "        \"query\": \"MATCH (n:User)-[r:RATED]-(m:Movie)-[i:IN_GENRE]-(g:Genre) RETURN n, r, m, i, g LIMIT 100\"\n",
     "      }\n",
     "    ],\n",
     "}"
@@ -99,20 +99,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "got records\n",
       "{'graph_type': 3, 'is_directed_int': 0, 'has_spatial_attributes': 0, 'has_temporal_attributes': 1, 'is_planar': 1, 'is_bipartite': 1, 'n_components': 114, 'avg_betweenness_centrality': 2.8341959255350203e-05, 'avg_closeness_centrality': 0.010367396422318965, 'avg_eigenvector_centrality': 0.008691461397179927, 'avg_degree': 1.6420361247947455, 'std_degree': 2.9272887680561324, 'clustering_coefficient': 0.0, 'transitivity': 0, 'modularity': 0.9711780000000003, 'communities': 115, 'avg_shortest_path_length': -1, 'radius': -1, 'diameter': -1, 'assortativity': -0.3250122093356985, 'vertex_connectivity': 0, 'eccentricity_avg': -1, 's_metric': -1, 'sigma': -1, 'n_nodes': 609, 'node_types': 2, 'node_attributes': 14.683087027914613, 'number_of_isolates': 0, 'density': 0.0027007173105176737, 'edge_types': 1, 'edge_attributes': 1.402, 'n_parallel_edges': 0, 'n_self_loops': 0}\n",
+      "got records\n",
       "{'graph_type': 3, 'is_directed_int': 0, 'has_spatial_attributes': 0, 'has_temporal_attributes': 1, 'is_planar': 1, 'is_bipartite': 1, 'n_components': 3, 'avg_betweenness_centrality': 0.005741179486309567, 'avg_closeness_centrality': 0.306624489823494, 'avg_eigenvector_centrality': 0.06671346268318888, 'avg_degree': 1.941747572815534, 'std_degree': 7.607820077250295, 'clustering_coefficient': 0.0, 'transitivity': 0, 'modularity': 0.37834999999999996, 'communities': 4, 'avg_shortest_path_length': -1, 'radius': -1, 'diameter': -1, 'assortativity': -0.7446509879383778, 'vertex_connectivity': 0, 'eccentricity_avg': -1, 's_metric': -1, 'sigma': -1, 'n_nodes': 103, 'node_types': 2, 'node_attributes': 16.339805825242717, 'number_of_isolates': 0, 'density': 0.019036740909956214, 'edge_types': 1, 'edge_attributes': 3.0, 'n_parallel_edges': 0, 'n_self_loops': 0}\n",
-      "{'graph_type': 3, 'is_directed_int': 0, 'has_spatial_attributes': 0, 'has_temporal_attributes': 1, 'is_planar': 0, 'is_bipartite': 1, 'n_components': 36, 'avg_betweenness_centrality': 0.005871845049189121, 'avg_closeness_centrality': 0.05797904982315292, 'avg_eigenvector_centrality': 0.006698799481932775, 'avg_degree': 2.0976042590949424, 'std_degree': 1.6184064294178806, 'clustering_coefficient': 0.0, 'transitivity': 0, 'modularity': 0.4512580844649433, 'communities': 37, 'avg_shortest_path_length': -1, 'radius': -1, 'diameter': -1, 'assortativity': -0.6518779471936305, 'vertex_connectivity': 0, 'eccentricity_avg': -1, 's_metric': -1, 'sigma': -1, 'n_nodes': 1127, 'node_types': 3, 'node_attributes': 10.491570541259982, 'number_of_isolates': 0, 'density': 0.0018628812247734835, 'edge_types': 2, 'edge_attributes': 1.8587140439932317, 'n_parallel_edges': 0, 'n_self_loops': 0}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception ignored in: <bound method IPythonKernel._clean_thread_parent_frames of <ipykernel.ipkernel.IPythonKernel object at 0x104d9a8b0>>\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/sjoerdvink/Developer/Experiments/vigor-visualization-recommendation-for-graphs/.venv/lib/python3.9/site-packages/ipykernel/ipkernel.py\", line 775, in _clean_thread_parent_frames\n",
-      "    def _clean_thread_parent_frames(\n",
-      "KeyboardInterrupt: \n"
+      "got records\n",
+      "{'graph_type': 3, 'is_directed_int': 0, 'has_spatial_attributes': 0, 'has_temporal_attributes': 1, 'is_planar': 0, 'is_bipartite': 1, 'n_components': 36, 'avg_betweenness_centrality': 0.005871845049189121, 'avg_closeness_centrality': 0.05797904982315292, 'avg_eigenvector_centrality': 0.006698799481932775, 'avg_degree': 2.0976042590949424, 'std_degree': 1.6184064294178806, 'clustering_coefficient': 0.0, 'transitivity': 0, 'modularity': 0.4512580844649433, 'communities': 37, 'avg_shortest_path_length': -1, 'radius': -1, 'diameter': -1, 'assortativity': -0.6518779471936305, 'vertex_connectivity': 0, 'eccentricity_avg': -1, 's_metric': -1, 'sigma': -1, 'n_nodes': 1127, 'node_types': 3, 'node_attributes': 10.491570541259982, 'number_of_isolates': 0, 'density': 0.0018628812247734835, 'edge_types': 2, 'edge_attributes': 1.8587140439932317, 'n_parallel_edges': 0, 'n_self_loops': 0}\n",
+      "got records\n",
+      "{'graph_type': 3, 'is_directed_int': 0, 'has_spatial_attributes': 0, 'has_temporal_attributes': 1, 'is_planar': 0, 'is_bipartite': 1, 'n_components': 1, 'avg_betweenness_centrality': 0.025181488203266787, 'avg_closeness_centrality': 0.4234868718521909, 'avg_eigenvector_centrality': 0.10532745436115767, 'avg_degree': 3.9310344827586206, 'std_degree': 5.9496780657872055, 'clustering_coefficient': 0.0, 'transitivity': 0, 'modularity': 0.24526777469990768, 'communities': 2, 'avg_shortest_path_length': 2.4101633393829403, 'radius': 2, 'diameter': 4, 'assortativity': -0.5250911914997197, 'vertex_connectivity': 1, 'eccentricity_avg': 3.7241379310344827, 's_metric': 8195.0, 'sigma': np.float64(0.0), 'n_nodes': 58, 'node_types': 3, 'node_attributes': 6.362068965517241, 'number_of_isolates': 0, 'density': 0.06896551724137931, 'edge_types': 2, 'edge_attributes': 2.754385964912281, 'n_parallel_edges': 0, 'n_self_loops': 0}\n"
      ]
     }
    ],
