--- a/notebooks/evaluation.ipynb
+++ b/notebooks/evaluation.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
     }
    ],
    "source": [
-    "file_path = '../data/generated_graphs'\n",
+    "file_path = '../data/generated_graphs_example'\n",
     "\n",
     "if not os.path.exists(f'{file_path}.csv'):\n",
     "    print('Generating graph data')\n",
